--- a/Resume.html
+++ b/Resume.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="style.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Resume3</title>
 </head>
 <body style="background-color:pink;">
