--- a/Resume.html
+++ b/Resume.html
@@ -57,7 +57,6 @@
         </table>
     </section>
 
-    <!-- Calculator section styled like the rest of the page -->
     <section class="calculator-section">
         <h3>Try Calculator:</h3>
         <div class="personal-info-shape">
@@ -68,9 +67,9 @@
 
 
     <script>
-        // Function to navigate to the calculator page
+
         function openCalculator() {
-            window.location.href = 'HTML2.html'; // Redirects to the calculator page
+            window.location.href = 'HTML2.html'; 
         }
     </script>
 </body>
